--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="#">Dating App</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item active">
-      <a class="nav-link" href="#">Matches </a>
+      <a class="nav-link" href="#">Matches</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Listes</a>
@@ -11,17 +11,27 @@
       <a class="nav-link" href="#">Messages</a>
     </li>
   </ul>
-  <form class="form-inline my-2 my-lg-0">
+  <form
+    #loginFrom="ngForm"
+    class="form-inline my-2 my-lg-0"
+    (ngSubmit)="login()"
+  >
     <input
       class="form-control mr-sm-2"
       type="text"
+      name="username"
       placeholder="Username"
+      required
+      [(ngModel)]="model.username"
     />
     <input
       class="form-control mr-sm-2"
       type="text"
+      name="password"
       placeholder="Password"
+      required
+      [(ngModel)]="model.password"
     />
-    <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+    <button [disabled]="!loginFrom.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
   </form>
 </nav>
