--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -11,7 +11,19 @@
       <a class="nav-link" href="#">Messages</a>
     </li>
   </ul>
+  <div *ngIf="isLoggedIn()" class="dropdown">
+    <a class="dropdown-toggle text-light" role="button" data-toggle="dropdown">
+      Welcome User
+    </a>
+
+    <div class="dropdown-menu">
+      <a class="dropdown-item"><i class="fa fa-user"></i> Edit profile</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item"(click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
+    </div>
+  </div>
   <form
+    *ngIf="!isLoggedIn()"
     #loginFrom="ngForm"
     class="form-inline my-2 my-lg-0"
     (ngSubmit)="login()"
@@ -32,6 +44,12 @@
       required
       [(ngModel)]="model.password"
     />
-    <button [disabled]="!loginFrom.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+    <button
+      [disabled]="!loginFrom.valid"
+      class="btn btn-success my-2 my-sm-0"
+      type="submit"
+    >
+      Login
+    </button>
   </form>
 </nav>
