--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -15,11 +15,12 @@
     <a class="dropdown-toggle text-light" role="button" data-toggle="dropdown">
       Welcome User
     </a>
-
     <div class="dropdown-menu">
       <a class="dropdown-item"><i class="fa fa-user"></i> Edit profile</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item"(click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
+      <a class="dropdown-item" (click)="logout()"
+        ><i class="fa fa-sign-out"></i> Logout</a
+      >
     </div>
   </div>
   <form
