Display the name of the user

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -13,7 +13,7 @@
   </ul>
   <div *ngIf="isLoggedIn()" class="dropdown">
     <a class="dropdown-toggle text-light" role="button" data-toggle="dropdown">
-      Welcome User
+      Welcome {{authService.decodedToken.unique_name}}
     </a>
     <div class="dropdown-menu">
       <a class="dropdown-item"><i class="fa fa-user"></i> Edit profile</a>
