--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,7 @@
       class="card-img-top"
     />
     <ul class="list-inline member-icons animate text-center">
-      <li class="list-inline-item">
+      <li class="list-inline-item" [routerLink]="['/members/',user.id]">
         <button class="btn-primary">
           <i class="fa fa-user"></i>
         </button>
